Implement nested OpenID4VP flow for presentation during issuance on v1.0
Signed-off-by: Ingrid Kamga <xingridkamga@gmail.com>